// Copyright 2026 Teradata
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package loom.v1;

option go_package = "github.com/teradata-labs/loom/gen/go/loom/v1;loomv1";

// CommunicationTier defines the three-tier communication model.
enum CommunicationTier {
  COMMUNICATION_TIER_UNSPECIFIED = 0;
  // Tier 1: Always reference (shared mutable state, workflow context)
  COMMUNICATION_TIER_ALWAYS_REFERENCE = 1;
  // Tier 2: Auto-promote based on size (>1KB default)
  COMMUNICATION_TIER_AUTO_PROMOTE = 2;
  // Tier 3: Always value (control messages, pattern refs, config)
  COMMUNICATION_TIER_ALWAYS_VALUE = 3;
}

// ReferenceType categorizes the kind of data stored in a reference.
enum ReferenceType {
  REFERENCE_TYPE_UNSPECIFIED = 0;
  REFERENCE_TYPE_SESSION_STATE = 1;
  REFERENCE_TYPE_WORKFLOW_CONTEXT = 2;
  REFERENCE_TYPE_COLLABORATION_STATE = 3;
  REFERENCE_TYPE_LARGE_PAYLOAD = 4;
  REFERENCE_TYPE_PATTERN_DATA = 5;
  REFERENCE_TYPE_TOOL_RESULT = 6;
  REFERENCE_TYPE_OBSERVABILITY_TRACE = 7;
}

// ReferenceStore identifies the backend storage for references.
enum ReferenceStore {
  REFERENCE_STORE_UNSPECIFIED = 0;
  REFERENCE_STORE_MEMORY = 1;
  REFERENCE_STORE_SQLITE = 2;
  REFERENCE_STORE_REDIS = 3;
}

// CommunicationMessage is the envelope for all agent-to-agent communication.
// This is distinct from conversation Message (user/assistant/tool messages).
message CommunicationMessage {
  // Unique message identifier
  string id = 1;

  // Source agent ID
  string from_agent = 2;

  // Destination agent ID
  string to_agent = 3;

  // Message payload (value or reference)
  MessagePayload payload = 4;

  // Communication policy applied to this message
  CommunicationPolicy policy = 5;

  // Message timestamp (Unix seconds)
  int64 timestamp = 6;
}

// MessagePayload contains either direct value or reference to data.
message MessagePayload {
  // Data can be either value (direct) or reference (indirect)
  oneof data {
    // Direct value (small payloads, control messages)
    bytes value = 1;

    // Reference to shared data (large payloads, shared state)
    Reference reference = 2;
  }

  // Payload metadata (size, content type, etc.)
  PayloadMetadata metadata = 3;
}

// Reference points to data stored in a ReferenceStore.
message Reference {
  // Unique reference identifier
  string id = 1;

  // Type of data being referenced
  ReferenceType type = 2;

  // Storage backend where data is stored
  ReferenceStore store = 3;

  // Reference creation timestamp (Unix seconds)
  int64 created_at = 4;

  // Reference expiry timestamp (Unix seconds, 0 = never expires)
  int64 expires_at = 5;
}

// PayloadMetadata provides information about the payload.
message PayloadMetadata {
  // Size of actual data in bytes
  int64 size_bytes = 1;

  // MIME content type (e.g., "application/json", "text/plain")
  string content_type = 2;

  // Optional checksum for data integrity
  string checksum = 3;

  // Compression applied (if any): "none", "gzip", "zstd"
  string compression = 4;

  // Encoding applied (if any): "none", "base64"
  string encoding = 5;
}

// CommunicationPolicy defines when to use references vs values.
message CommunicationPolicy {
  // Communication tier for this message type
  CommunicationTier tier = 1;

  // Message type (e.g., "session_state", "control", "data")
  string message_type = 2;

  // Auto-promotion settings
  AutoPromoteConfig auto_promote = 3;

  // Policy overrides (force reference or value)
  map<string, PolicyOverride> overrides = 4;
}

// AutoPromoteConfig controls automatic value-to-reference promotion.
message AutoPromoteConfig {
  // Enable automatic promotion based on size
  bool enabled = 1;

  // Size threshold in bytes (default: 1024 = 1KB)
  int64 threshold_bytes = 2;
}

// PolicyOverride forces specific behavior for a message type.
message PolicyOverride {
  // Force reference or force value
  enum OverrideType {
    OVERRIDE_TYPE_UNSPECIFIED = 0;
    OVERRIDE_TYPE_FORCE_REFERENCE = 1;
    OVERRIDE_TYPE_FORCE_VALUE = 2;
  }

  OverrideType type = 1;

  // Reason for override (documentation)
  string reason = 2;
}

// ReferenceStoreStats provides statistics about reference storage.
message ReferenceStoreStats {
  // Total references ever created
  int64 total_refs = 1;

  // Total bytes ever stored
  int64 total_bytes = 2;

  // Currently active references
  int64 active_refs = 3;

  // Garbage collection runs
  int64 gc_runs = 4;

  // References evicted by GC
  int64 eviction_count = 5;

  // Current memory usage (bytes)
  int64 current_bytes = 6;
}

// SendAsyncRequest sends a message asynchronously (fire-and-forget).
message SendAsyncRequest {
  // Destination agent ID
  string to_agent = 1;

  // Source agent ID
  string from_agent = 2;

  // Message type for routing/filtering
  string message_type = 3;

  // Message payload (value or reference, auto-promoted based on size)
  MessagePayload payload = 4;

  // Optional metadata
  map<string, string> metadata = 5;

  // Communication policy to apply
  CommunicationPolicy policy = 6;
}

// SendAsyncResponse confirms the async send operation.
message SendAsyncResponse {
  // Unique message ID for tracking
  string message_id = 1;

  // True if message was queued (destination agent offline)
  bool queued = 2;

  // Timestamp when message was sent or queued (Unix milliseconds)
  int64 timestamp = 3;
}

// SendAndReceiveRequest sends a message and waits for response (RPC-style).
message SendAndReceiveRequest {
  // Destination agent ID
  string to_agent = 1;

  // Source agent ID
  string from_agent = 2;

  // Message type for routing/filtering
  string message_type = 3;

  // Message payload (value or reference, auto-promoted based on size)
  MessagePayload payload = 4;

  // Optional metadata
  map<string, string> metadata = 5;

  // Communication policy to apply
  CommunicationPolicy policy = 6;

  // Timeout in seconds (0 = no timeout)
  int32 timeout_seconds = 7;
}

// SendAndReceiveResponse contains the response from the destination agent.
message SendAndReceiveResponse {
  // Original request message ID
  string request_id = 1;

  // Response message ID
  string response_id = 2;

  // Response payload from destination agent
  MessagePayload payload = 3;

  // Response metadata
  map<string, string> metadata = 4;

  // Timestamp when response was received (Unix milliseconds)
  int64 timestamp = 5;

  // True if request timed out (no response within timeout_seconds)
  bool timed_out = 6;
}
